<?xml version="1.0" encoding="utf-8"?><!--
 A Simple Camera Application.

 Copyright 2017 nyoa (Asuka Nakayama).

 Released under the MIT license.
 https://github.com/nyoa/license

 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="timer_desc">タイマーの設定をするんですぅ。</string>
    <string name="zoom_desc">拡大・露出の設定をするんですぅ。</string>
    <string name="take_desc">撮影をするんですぅ。</string>
    <string name="request_permission">カメラのパーミッションが必要なんですぅ。穴掘って埋まってますぅ＞＜</string>
    <string name="camera_error">このデバイスはCamera2をサポートしていないため非対応ですぅ。</string>
    <string name="zoomDesc_text">拡大・縮小</string>
    <string name="expoDesc_text">露光</string>
    <string name="zoomDesc_desc">拡大・縮小の操作を行うんですぅ。</string>
    <string name="expoDesc_desc">露光の設定を行うんですぅ。</string>
</resources>
