<?xml version="1.0" encoding="utf-8"?><!--
 A Simple Camera Application.

 Copyright 2017 nyoa (Asuka Nakayama).

 Released under the MIT license.
 https://github.com/nyoa/license

 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <jp.ne.nako.camera.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <FrameLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/control_background">

        <ImageButton
            android:id="@+id/take"
            android:contentDescription="@string/take_desc"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:src="@drawable/camera_icon" />

        <ImageButton
            android:id="@+id/timer"
            android:contentDescription="@string/timer_desc"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:padding="20dp"
            android:src="@drawable/timer_icon" />

        <ImageButton
            android:id="@+id/zoom"
            android:contentDescription="@string/zoom_desc"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:padding="20dp"
            android:src="@drawable/zoom_icon" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/zoomInner"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:layout_above="@+id/control"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/zoomDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zoomDesc_text" />

        <SeekBar
            android:id="@+id/zoomSeek"
            android:contentDescription="@string/zoomDesc_desc"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/exposureDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expoDesc_text" />

        <SeekBar
            android:id="@+id/exposureSeek"
            android:contentDescription="@string/expoDesc_desc"
            android:layout_width="match_parent"
            android:layout_height="32dp" />
    </LinearLayout>

</RelativeLayout>
